tests/errors/case_type_pattern_not_union.dang
type Cat {
  name: String!
}

let x = Cat(name: "Whiskers")

let result = case (x) {
  c: Cat => c.name
}
